tdf#153154: m_xDataTypeLB is still in use

Regression from 2e7f77d3fe01e36222d5ad84c18d7d7537092972
"loplugin:unusedfields"

Change-Id: Ic9435ee9417f812281ad75039d4ef88f508bad62
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145949
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>